--- a/lib_pandas/conceitos_gerais.ipynb
+++ b/lib_pandas/conceitos_gerais.ipynb
@@ -14,7 +14,16 @@
     "#criando uma serie simples: dados=[10, 20, 30, 40, 50];\n",
     "#serie co indices personalizadas\n",
     "vendas = pd.Series([200,300,400,500], index=['janeiro', 'fevereiro', 'marco', 'abril'])\n",
-    "\n"
+    "\n",
+    "#dados em formato de dicionario \n",
+    "dados = {\n",
+    "    'produto':['arroz', 'feijao', 'macarrao', 'acucar'],\n",
+    "    'preco':[5.5, 7.0, 4.5, 3.8],\n",
+    "    'estoque':[50, 70, 40, 80]\n",
+    "}\n",
+    "\n",
+    "#crinado do DataFrame\n",
+    "df =pd.DataFrame(dados)"
    ]
   }
  ],
