--- a/lib_pandas/introducao_pandas_series_dataframe.ipynb
+++ b/lib_pandas/introducao_pandas_series_dataframe.ipynb
@@ -86,6 +86,67 @@
     "acesso_via_indice = vendas[0]\n",
     "(informacao_abril, acesso_via_indice)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soma = vendas.sum()\n",
+    "media = vendas.mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"  \n",
+    "Funcao describe(): analise de dados aplicadas a colunas numericas estatisticas:\n",
+    "counrt   : Numero da valores nao nulos na coluna.\n",
+    "mean     : media aritimetica dos valore.\n",
+    "std      : Desvio padrao, que mede a dispersdao dos dados em relação a media\n",
+    "min      : Valor minimo na coluna \n",
+    "25%      : prieiro quartil (25º percentil), valor abaixo do qual 25% dos dados se3 econtram\n",
+    "50%      : segundo quartil (mediana), valor abaixo do qual 50% dos dados se encontram.\n",
+    "75%      : terceiro quartil (75% percentil), valor abaixo do qual 75% dos dados se encontram\n",
+    "max      : valor maximoi no coluna\n",
+    "\"\"\"\n",
+    "df.describe()\n",
+    "# df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#media\n",
+    "df[\"preco\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#soma\n",
+    "df[\"estoque\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filtrar dados Dataframe\n",
+    "df[df[\"preco\"] > 5]"
+   ]
   }
  ],
  "metadata": {
