--- a/lib_pandas/Exercicios_Pandas.ipynb
+++ b/lib_pandas/Exercicios_Pandas.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "3  Lamborghini Aventador  2012   4000000   160000.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
     "    'Carros':['Pagani', 'Ferrari Roma', 'Porsche 911', 'Lamborghini Aventador'],\n",
     "    'Ano':[2025, 2024, 2023, 2012],\n",
     "    'Preço':[12900000, 25000000, 868000, 4000000],\n",
-    "    'IPVA':[12900000 * 4/100, 25000000 * 4/100, 868000 * 4/100, 4000000 * 4/100]\n",
+    "    'IPVA':[12900000 * 0.04, 25000000 * 0.04, 868000 * 0.04, 4000000 * 0.04]\n",
     "}\n",
     "\n",
     "df =pd.DataFrame(dados_dos_carros)\n",
