--- a/lib_pandas/Exercicios_Pandas.ipynb
+++ b/lib_pandas/Exercicios_Pandas.ipynb
@@ -269,6 +269,42 @@
    "source": [
     "df[df[\"Preço\"] > 50000]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mais_caro = df[df['preço'] == df['preço'].max()]\n",
+    "\n",
+    "mais_barato = df[df['preço'] == df['preço'].min()]\n",
+    "\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Esse é o valor do mais barato:\")\n",
+    "\n",
+    "mais_barato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Esse é o valor do mais caro:\")\n",
+    "\n",
+    "mais_caro"
+   ]
   }
  ],
  "metadata": {
