--- a/lib_pandas/conceitos_gerais.ipynb
+++ b/lib_pandas/conceitos_gerais.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -27,24 +18,49 @@
     }
    ],
    "source": [
-    "\"\"\"PANDAS - SERIES\"\"\"\n",
+    "#Panda - Series\n",
     "\n",
-    "#Etrutura umidimensional semelhante a um vetor, array ou coluna de uma tabela\n",
-    "#índice (rotulavel);\n",
-    "#tipos de dados: valores numericos, textos, datas, etc...;\n",
-    "#criando uma serie simples: dados=[10, 20, 30, 40, 50];\n",
-    "#serie co indices personalizadas\n",
-    "vendas = pd.Series([200,300,400,500], index=['janeiro', 'fevereiro', 'marco', 'abril'])\n",
+    "import pandas as pd\n",
     "\n",
-    "#dados em formato de dicionario \n",
+    "#estrutura unidimencional semelhante a um vetor, array ou coluna de tabela;\n",
+    "#Índice(rotulável)\n",
+    "\n",
+    "#criando uma série simples: \n",
+    "dados = [10, 20, 30, 40, 50]\n",
+    "\n",
+    "#série de índice personalizados\n",
+    "venda = pd.Series([200, 300, 400, 500],index=['janeiro', 'fevereiro', 'março', 'abril'])\n",
+    "\n",
+    "print(venda['março'])\n",
+    "\n",
+    "print(venda[0])\n",
+    "\n",
+    "print(venda.sum())\n",
+    "\n",
+    "print(venda.mean())\n",
+    "\n",
+    "print(venda.max()) #encontra o elemento máximo de uma serie\n",
+    "\n",
     "dados = {\n",
-    "    'produto':['arroz', 'feijao', 'macarrao', 'acucar'],\n",
-    "    'preco':[5.5, 7.0, 4.5, 3.8],\n",
+    "    \n",
+    "    'produto':['arroz', 'feijão', 'macarrão', 'açucar'],\n",
+    "    \n",
+    "    'preço':[5.5, 7.0, 4.5, 3.8],\n",
+    "    \n",
     "    'estoque':[50, 70, 40, 80]\n",
     "}\n",
     "\n",
-    "#crinado do DataFrame\n",
-    "df =pd.DataFrame(dados)\n"
+    "df = pd.DataFrame(dados)\n",
+    "\n",
+    "print(df['produto'])\n",
+    "\n",
+    "print(df[['produto', 'preço']])\n",
+    "\n",
+    "print(df.describe())\n",
+    "\n",
+    "print(df['preço'].mean())\n",
+    "\n",
+    "print(df['estoque'].sum())"
    ]
   }
  ],
