--- a/lib_pandas/introducao_pandas_series_dataframe.ipynb
+++ b/lib_pandas/introducao_pandas_series_dataframe.ipynb
@@ -94,7 +94,80 @@
    "outputs": [],
    "source": [
     "soma = vendas.sum()\n",
-    "media = vendas.mean()\n"
+    "media = vendas.mean()\n",
+    "maximo = vendas.max()\n",
+    "\n",
+    "(soma, media, maximo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = {\n",
+    "     \n",
+    "    'produto':['arroz', 'feijão', 'macarrão', 'açucar'],\n",
+    "    \n",
+    "    'preço':[5.5, 7.0, 4.5, 3.8],\n",
+    "    \n",
+    "    'estoque':[50, 70, 40, 80]\n",
+    "}\n",
+    "\n",
+    "#df = pd.Series(lista)\n",
+    "df = pd.DataFrame(lista)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coluna_produto = df['produto']\n",
+    "\n",
+    "coluna_produto_preço = df[['produto', 'preço']]\n",
+    "\n",
+    "(coluna_produto_preço)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coluna_produto = df['produto']\n",
+    "\n",
+    "coluna_produto_preço = df[['produto', 'preço']]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#(coluna_produto, coluna_produto_preço)\n",
+    "coluna_produto_preço"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coluna_produto = df['produto']\n",
+    "\n",
+    "coluna_produto_preço = df[['produto', 'preço']]\n",
+    "\n",
+    "#linha_zero = df.loc[0]\n",
+    "\n",
+    "linha3     = df.iloc[2]\n",
+    "\n",
+    "#(coluna_produto, coluna_produto_preço)\n",
+    "#coluna_produto_preço\n",
+    "\n",
+    "#(df, linha_zero, linha3)"
    ]
   },
   {
